# dali

./: .dockerignore  .editorconfig  .env  .envrc  .gitignore  .gitlab-ci.yml  .releaserc.json  .tool-versions  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.preview  Dockerfile.vips  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  build.rs  criterion.toml  dali-openapi3_1.yaml  docker-compose.tests.yaml  docker-compose.yaml  renovate.json
.github/: dependabot.yml  release-drafter.yml  release.yml
.github/workflows/: action.yml  base_image.yml  build.yml  conventional-label.yml  conventional-prs.yml  delete-pr-artifacts-and-images.yml  docker.yml  lint-pr-title-preview-outputErrorMessage.yml  lint-pr-title-with-feedback.yml  pr-cleanup.yml  pr-tests-docker.yml  publish.yml  pull-requests-tests.yml  release-drafter.yml  release-previewer.yml  release.yml  release.yml.off  stale.yml  test-arm.yml  tests.yml
benches/: bench.rs  htsget-refserver-config.json  request_benchmarks.rs
config/: compose.json  default.json  production.json
dev-env-resources/: docker-compose.yaml  kes-client.crt  kes-client.key  kes-private.key  kes-public.crt  kes-server-config.yml  otel-collector-config.yaml
reports/criterion/request_benchmarks/awc_client/: benchmark.json  estimates.json  tukey.json
reports/criterion/request_benchmarks/change/: estimates.json
reports/criterion/request_benchmarks/hyper_client/: estimates.json  sample.json  tukey.json
reports/criterion/request_benchmarks/new/: sample.json
reports/criterion/request_benchmarks/report/: index.html
scripts/: dali-bench.sh  dali-test-up.sh  dali-tests-runner.sh  get-current-version.sh
src/: main.rs
src/commons/: actix_utils.rs  config.rs  errors.rs  http.rs  mod.rs  open_telemetry.rs
src/image_processor/: mod.rs
src/image_provider/: mod.rs  reqwest.rs  s3.rs
src/routes/: image.rs  metric.rs  mod.rs
tests/: e2e.rs
tests/resources/: highres  img-test  lena  watermark
tests/results/: raw.heic
tests/utils/: mod.rs
