# (c) Copyright 2019-2024 OLX
[package]
name = "dali"
version = "2.4.0"
authors = ["Augusto César Dias <augusto.dias@olx.com>"]
edition = "2021"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
s3 = [
  "dep:aws-config",
  "dep:aws-sdk-s3",
  "dep:aws-sdk-sts",
  "dep:aws-credential-types",
]
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:sysinfo",
  "dep:tokio-cron-scheduler",
  "dep:tonic",
]

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.7.4", features = ["tokio"] }
tower = { version = "0.4.13", features = ["timeout"] }
futures = "0.3.29"
num_cpus = "1.16.0"
prometheus = { version = "0.13.3", features = ["process", "nightly"] }
prometheus-static-metric = "0.5.1"
log = "0.4.20"
env_logger = "0.10.0"
serde = "1.0.195"
serde_json = "1.0.111"
serde_qs = "0.12.0"
config = "0.13.3"
reqwest = { version = "0.11.24", optional = true, features = ["stream"] }
libvips = "1.5.0"
rexif = "0.7.3"
lazy_static = "1.4.0"
aws-config = { version = "1.1.4", optional = true }
aws-sdk-s3 = { version = "1.14.0", optional = true }
aws-sdk-sts = { version = "1.12.0", optional = true }
aws-credential-types = { version = "1.1.4", optional = true }
async-trait = "0.1.75"
thiserror = "1.0.53"
rayon = "1.8.1"
opentelemetry = { version = "0.27.0", features = ["default"], optional = true }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio", "internal-logs", "logs"], optional = true }
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic", "gzip-tonic", "tls", "tls-roots", "internal-logs", "logs"], optional = true }
sysinfo = { version = "0.32.0", optional = true }
tokio-cron-scheduler = { version = "0.13.0", optional = true }
tonic = { version = "0.12.3", optional = true, features = ["tls", "tls-roots", "tls-native-roots", "tls-webpki-roots"] }

[dev-dependencies.reqwest]
version = "0.11.24"
